--- a/stack.yaml
+++ b/stack.yaml
@@ -8,3 +8,9 @@ extra-deps:
 - servant-flatten-0.2@sha256:276896f7c5cdec5b8f8493f6205fded0cc602d050b58fdb09a6d7c85c3bb0837,1234
 # - constraints-extras-0.3.0.2@sha256:013b8d0392582c6ca068e226718a4fe8be8e22321cc0634f6115505bf377ad26,1853
 - some-1.0.3
+- github: lambdamechanic/minithesis-hs
+  commit: 1fc7854b45d1b1c01aab333621060ce223f8757b
+- hspec-2.11.9
+- hspec-core-2.11.9
+- hspec-discover-2.11.9
+- hspec-expectations-0.8.4
