--- a/cabal.project
+++ b/cabal.project
@@ -4,3 +4,5 @@ source-repository-package
   type: git
   location: https://github.com/lambdamechanic/minithesis-hs.git
   tag: 1fc7854b45d1b1c01aab333621060ce223f8757b
+
+constraints: envparse < 0.6
