--- a/package.yaml
+++ b/package.yaml
@@ -55,11 +55,10 @@ tests:
     dependencies:
     - roboservant
     - aeson >= 1.5 && < 2.3
-    - hspec
-    - hspec-core
     - http-api-data >= 0.4 && < 0.7
     - http-client >= 0.5 && < 0.8
-    - hspec-wai
+    - network >= 3.1 && < 3.3
+    - sydtest >= 0.15 && < 0.16
     - wai >= 3.2 && < 3.3
     - warp >= 3.3 && < 3.5
   example:
@@ -68,11 +67,10 @@ tests:
 
     dependencies:
       - roboservant
-      - hspec
+      - sydtest >= 0.15 && < 0.16
       - warp >= 3.3 && < 3.5
       - http-client >= 0.5 && < 0.8
       - aeson >= 1.5 && < 2.3
-      - hspec-core
     ghc-options:    -pgmL markdown-unlit
 
     build-tools:  markdown-unlit
