--- a/roboservant.cabal
+++ b/roboservant.cabal
@@ -1,10 +1,8 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.38.0.
+-- This file has been generated from package.yaml by hpack version 0.37.0.
 --
 -- see: https://github.com/sol/hpack
---
--- hash: 5b4f4e5c9ed0cdbf478a495864807d220b609892cc667e6ce5cfa0ff25e3c5a7
 
 name:           roboservant
 version:        0.1.0.4
@@ -46,9 +44,9 @@ library
       src
   ghc-options: -Wall -fwrite-ide-info -hiedir=.hie
   build-depends:
-      base >=4.7 && <5
+      base >=4.7 && <4.22
     , bytestring >=0.11 && <0.13
-    , containers ==0.6.*
+    , containers >=0.6 && <0.9
     , dependent-map ==0.4.*
     , dependent-sum ==0.7.*
     , hashable >=1.4 && <1.6
@@ -63,8 +61,8 @@ library
     , servant-flatten ==0.2.*
     , servant-server >=0.18 && <0.21
     , string-conversions ==0.4.*
-    , text >=1.2 && <2.1
-    , time >=1.9 && <1.13
+    , text >=1.2 && <2.3
+    , time >=1.9 && <1.16
     , unordered-containers >=0.2.10 && <0.3
     , vinyl >=0.13 && <0.15
   default-language: Haskell2010
@@ -81,9 +79,9 @@ test-suite example
       markdown-unlit:markdown-unlit
   build-depends:
       aeson >=1.5 && <2.3
-    , base >=4.7 && <5
+    , base >=4.7 && <4.22
     , bytestring >=0.11 && <0.13
-    , containers ==0.6.*
+    , containers >=0.6 && <0.9
     , dependent-map ==0.4.*
     , dependent-sum ==0.7.*
     , hashable >=1.4 && <1.6
@@ -100,9 +98,9 @@ test-suite example
     , servant-flatten ==0.2.*
     , servant-server >=0.18 && <0.21
     , string-conversions ==0.4.*
-    , sydtest ==0.15.*
-    , text >=1.2 && <2.1
-    , time >=1.9 && <1.13
+    , sydtest >=0.15 && <0.22
+    , text >=1.2 && <2.3
+    , time >=1.9 && <1.16
     , unordered-containers >=0.2.10 && <0.3
     , vinyl >=0.13 && <0.15
     , warp >=3.3 && <3.5
@@ -131,9 +129,9 @@ test-suite roboservant-test
   ghc-options: -Wall -fwrite-ide-info -hiedir=.hie -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson >=1.5 && <2.3
-    , base >=4.7 && <5
+    , base >=4.7 && <4.22
     , bytestring >=0.11 && <0.13
-    , containers ==0.6.*
+    , containers >=0.6 && <0.9
     , dependent-map ==0.4.*
     , dependent-sum ==0.7.*
     , hashable >=1.4 && <1.6
@@ -152,9 +150,9 @@ test-suite roboservant-test
     , servant-flatten ==0.2.*
     , servant-server >=0.18 && <0.21
     , string-conversions ==0.4.*
-    , sydtest ==0.15.*
-    , text >=1.2 && <2.1
-    , time >=1.9 && <1.13
+    , sydtest >=0.15 && <0.22
+    , text >=1.2 && <2.3
+    , time >=1.9 && <1.16
     , unordered-containers >=0.2.10 && <0.3
     , vinyl >=0.13 && <0.15
     , wai ==3.2.*
