--- a/cabal.project
+++ b/cabal.project
@@ -3,6 +3,7 @@ packages: .
 source-repository-package
   type: git
   location: https://github.com/lambdamechanic/minithesis-hs.git
-  tag: 0d8a0ecee3940055fd71ab92d3f011e1d1aa2f3a
+  tag: 2ee9e15077fb95850318eb7fca33c49a7fd45fa8
+  subdir: minithesis
 
 constraints: envparse < 0.6
