--- a/stack.yaml
+++ b/stack.yaml
@@ -8,6 +8,8 @@ extra-deps:
 - servant-flatten-0.2@sha256:276896f7c5cdec5b8f8493f6205fded0cc602d050b58fdb09a6d7c85c3bb0837,1234
 # - constraints-extras-0.3.0.2@sha256:013b8d0392582c6ca068e226718a4fe8be8e22321cc0634f6115505bf377ad26,1853
 - some-1.0.6
-- github: lambdamechanic/minithesis-hs
-  commit: 0d8a0ecee3940055fd71ab92d3f011e1d1aa2f3a
+- git: https://github.com/lambdamechanic/minithesis-hs.git
+  commit: 2ee9e15077fb95850318eb7fca33c49a7fd45fa8
+  subdirs:
+    - minithesis
 - sydtest-0.21.0.0
