--- a/package.yaml
+++ b/package.yaml
@@ -57,6 +57,7 @@ tests:
     - aeson >= 1.5 && < 2.3
     - http-api-data >= 0.4 && < 0.7
     - http-client >= 0.5 && < 0.8
+    - silently >= 0.3 && < 1.3
     - network >= 3.1 && < 3.3
     - sydtest >= 0.15 && < 0.22
     - wai >= 3.2 && < 3.3
