--- a/package.yaml
+++ b/package.yaml
@@ -20,6 +20,7 @@ dependencies:
 - containers >= 0.6 && < 0.9
 - random >= 1.2 && < 1.4
 - hashable >= 1.4 && < 1.6
+- http-client >= 0.5 && < 0.8
 - http-types >= 0.12 && < 0.13
 - lifted-base >= 0.2 && < 0.3
 - monad-control >= 1.0 && < 1.1
