--- a/package.yaml
+++ b/package.yaml
@@ -63,6 +63,7 @@ tests:
     - aeson >= 1.5 && < 2.3
     - http-api-data >= 0.4 && < 0.7
     - http-client >= 0.5 && < 0.8
+    - minithesis-sydtest >= 0.1 && < 0.2
     - silently >= 0.3 && < 1.3
     - network >= 3.1 && < 3.3
     - sydtest >= 0.15 && < 0.22
