--- a/roboservant.cabal
+++ b/roboservant.cabal
@@ -44,13 +44,16 @@ library
       src
   ghc-options: -Wall -fwrite-ide-info -hiedir=.hie
   build-depends:
-      base >=4.7 && <4.22
+      aeson >=1.5 && <2.3
+    , base >=4.7 && <4.22
+    , base64-bytestring >=1.0 && <1.3
     , bytestring >=0.11 && <0.13
     , containers >=0.6 && <0.9
     , dependent-map ==0.4.*
     , dependent-sum ==0.7.*
+    , directory ==1.3.*
+    , filepath >=1.4 && <1.6
     , hashable >=1.4 && <1.6
-    , aeson >=1.5 && <2.3
     , http-client >=0.5 && <0.8
     , http-types ==0.12.*
     , lifted-base ==0.2.*
@@ -58,14 +61,11 @@ library
     , monad-control ==1.0.*
     , mtl >=2.2 && <2.4
     , random >=1.2 && <1.4
-    , directory >=1.3 && <1.4
+    , scientific ==0.3.*
     , servant >=0.18 && <0.21
     , servant-client >=0.18 && <0.21
     , servant-flatten ==0.2.*
     , servant-server >=0.18 && <0.21
-    , scientific >=0.3 && <0.4
-    , base64-bytestring >=1.0 && <1.3
-    , filepath >=1.4 && <1.6
     , string-conversions ==0.4.*
     , text >=1.2 && <2.2
     , time >=1.9 && <1.16
@@ -86,10 +86,13 @@ test-suite example
   build-depends:
       aeson >=1.5 && <2.3
     , base >=4.7 && <4.22
+    , base64-bytestring >=1.0 && <1.3
     , bytestring >=0.11 && <0.13
     , containers >=0.6 && <0.9
     , dependent-map ==0.4.*
     , dependent-sum ==0.7.*
+    , directory ==1.3.*
+    , filepath >=1.4 && <1.6
     , hashable >=1.4 && <1.6
     , http-client >=0.5 && <0.8
     , http-types ==0.12.*
@@ -99,6 +102,7 @@ test-suite example
     , mtl >=2.2 && <2.4
     , random >=1.2 && <1.4
     , roboservant
+    , scientific ==0.3.*
     , servant >=0.18 && <0.21
     , servant-client >=0.18 && <0.21
     , servant-flatten ==0.2.*
@@ -119,8 +123,8 @@ test-suite roboservant-test
       Breakdown
       Foo
       Headers
-      MinithesisExample
       MinithesisAuth
+      MinithesisExample
       Nested
       Post
       Product
@@ -138,21 +142,26 @@ test-suite roboservant-test
   build-depends:
       aeson >=1.5 && <2.3
     , base >=4.7 && <4.22
+    , base64-bytestring >=1.0 && <1.3
     , bytestring >=0.11 && <0.13
     , containers >=0.6 && <0.9
     , dependent-map ==0.4.*
     , dependent-sum ==0.7.*
+    , directory ==1.3.*
+    , filepath >=1.4 && <1.6
     , hashable >=1.4 && <1.6
     , http-api-data >=0.4 && <0.7
     , http-client >=0.5 && <0.8
     , http-types ==0.12.*
     , lifted-base ==0.2.*
     , minithesis ==0.1.*
+    , minithesis-sydtest ==0.1.*
     , monad-control ==1.0.*
     , mtl >=2.2 && <2.4
     , network >=3.1 && <3.3
     , random >=1.2 && <1.4
     , roboservant
+    , scientific ==0.3.*
     , servant >=0.18 && <0.21
     , servant-client >=0.18 && <0.21
     , servant-flatten ==0.2.*
