enable io trace checks

--- a/roboservant.cabal
+++ b/roboservant.cabal
@@ -132,6 +132,7 @@ test-suite roboservant-test
       QueryParams
       Records
       Seeded
+      StatefulTrace
       SummaryExample
       UnsafeIO
       Valid
